--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_BASE_URL=https://todo-app-ten-sigma-10.vercel.app/
 MONGO_USER=nina
 MONGO_PASS=12345
 MONGO_URI=mongodb+srv://${MONGO_USER}:${MONGO_PASS}@cluster0.osah6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
